
  Silva 2.1.10 (unreleased)

    Bug fixes

     - update URL_PATTERN to support the entire range of characters supporting in the LHS of email addresses in mailto: links
     
     - unpublished Versions of VersionedContent objects were not unindexed from 
       the catalog when the Version was removed (e.g. via the status tab).
       A subscriber was added for the IObjectWillBeRemoved event

  Silva 2.1.9 (2009-11-26)
    
    New features
      
      - Check libxslt and libxml version at start up.

  Silva 2.1.8 (2009-11-24)

    New features

      - On cataloging exception report which object this happens.

  Silva 2.1.7 (2009-11-18)

    New features

      - Kupu is now translated (in dutch/english/german).

    Bug fixes

      - Fix an xml export error which happened when you export ghosts
        object which refer links which are not available anymore.

      - Safely completely ignore errors on Image resize / crop, so no
        error happens when using zip import (revert a fix from 2.1.6).

      - When setting web_format property on an Image, check if it's a
        valid supported web_format.

      - The user clipboard 'remove user' button now returns to the
        correct add user form.

      - Fix tocfilter if somehow non Silva object go through it.

      - Fix a bug if a view is used as return_to value in
        quick_publish.

      - Define a correct interface for SimpleMember which define the
        protocol to edit a user.

      - Fix link edition, when you change link type, the URL is set
        according the new link type rule. Fix other absolute/relative
        edition bugs.

      - Fix authentication on tab_preview (only to get one login form,
        and not one per frame).

      - Fix issue in forms editor where clicking _any_ action resulted in
        displaying the kupu editor. NOTE: this was actually fixed in an earlier
        2.1 release (2.1.4), but was not mentioned there.
